tests/NormalTests/paczka1/fuzzy1/49207809.err
Error in line 3: A348 A348 25,2
Error in line 5: GsYf A160 10,9
Error in line 7: GsYf S697 80,6
Error in line 15: c8T A160 58,8
Error in line 29: EyYETh A850 54,7
Error in line 31: zVe117t A160 7,87
Error in line 13: GsYf A850 96,0
Error in line 30: EyYETh A348 59,3
Error in line 18: zVe117t A160 2,3
Error in line 33: EyYETh S697 96,1
